[package]
authors      = ["Tony <repositony@outlook.com>"]
description  = "Command line tool to inspect and convert UKAEA CuV posvol files"
edition      = "2021"
keywords     = ["cuv", "mcnp", "mesh", "posvol"]
license      = "GPL-3.0 license"
name         = "posvol"
readme       = "readme.md"
repository   = "https://github.com/repositony/posvol"
rust-version = "1.81"
version      = "1.0.5"

[dependencies]
# core library, not currently for public use
ntools = { git = "ssh://git@github.com/repositony/ntools.git", branch = "main", features = [
    "posvol",
] }

# external
anyhow    = "1.0.97"
clap      = { version = "4.5.31", features = ["derive", "wrap_help"] }
log       = "0.4.26"
stderrlog = "0.6.0"

[lints.rust]
unsafe_code = "forbid"

[[bin]]
doc  = false
name = "posvol"

[profile.dist]
allow-dirty = ["ci", "msi"]
inherits    = "release"
lto         = "thin"
